bk_ida/gccida/c1/ix86_expand_compare
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_expand_compare/src/i386.c:8129:27: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  ix86_expand_compare( rtx_code code, rtx *second_test, rtx *bypass_test) 
                          ^
                          enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_expand_compare/src/i386.c:8140:15: error: must use 'enum' tag to refer to type 'mode_class'
if ( *( const mode_class *)( ( char *)mode_class_0 + ( ( *( _DWORD *)v5 >> 14) & 0x3FC)) == MODE_FLOAT ) 
              ^
              enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_expand_compare/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_expand_compare/src/i386.c:8140:39: error: use of undeclared identifier 'mode_class_0'
if ( *( const mode_class *)( ( char *)mode_class_0 + ( ( *( _DWORD *)v5 >> 14) & 0x3FC)) == MODE_FLOAT ) 
                                      ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_expand_compare/src/obj/i386.o] Error 1
